--- a/tutorials/nest_eeg_tutorial.ipynb
+++ b/tutorials/nest_eeg_tutorial.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Neural Encoding Simulation Toolkit | In silico EEG Data Tutorial\n",
         "\n",
-        "In this tutorial you will familiarize with the [Neural Encoding Simulation Toolkit (NEST)][nest], consisting of trained encoding models of the brain that you can use to generate of in silico neural responses to stimuli of your choice. Through the [`NEST` Python package][github], you will use these trained encoding models to generate fMRI responses to images.\n",
+        "In this tutorial you will familiarize with the [Neural Encoding Simulation Toolkit (NEST)][nest], consisting of trained encoding models of the brain that you can use to generate of in silico neural responses to stimuli of your choice. Through the [`NEST` Python package][github], you will use these trained encoding models to generate EEG responses to images.\n",
         "\n",
         "For more information on NEST refer to the [documentation][documentation]. The code used to create NEST, along with its utility functions, is available on [GitHub][github].\n",
         "\n",
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8hej6J1ukOj6"
       },
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -226,7 +226,7 @@
         }
       ],
       "source": [
-        "!pip install -U git+https://github.com/gifale95/NEST.git@development"
+        "!pip install -U git+https://github.com/gifale95/NEST.git"
       ]
     },
     {
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "G4ze_dIrxRN_"
       },
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -393,12 +393,12 @@
       "source": [
         "## 1.1 | Create the NEST object\n",
         "\n",
-        "To use the NEST package, you first need to create a `NEST` object, providing the path to the Neural Encoding Simulation Toolkit directory. This object will be the instance through which you can generate in-silico brain responses."
+        "To use the NEST package, you first need to create a `NEST` object, by providing the path to the Neural Encoding Simulation Toolkit directory. This object will be the instance through which you can generate in silico neural responses."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "155kfHQZeV6F"
       },
@@ -416,14 +416,20 @@
       "source": [
         "## 1.2 | Browse the available encoding models\n",
         "\n",
-        "Let's explore what's available in the NEST toolkit. Each model has a unique ID with a naming pattern `modality-dataset-model`.\n",
+        "The `list_models()` method lists the encoding models that are available in NEST. NEST contains several encoding models, defined by the following model ID naming convention:\n",
         "\n",
-        "\n"
+        "`{modality}-{dataset}-{model}`\n",
+        "\n",
+        "where\n",
+        "\n",
+        "* **`modality`:** The neural recording recording modality on which the encoding model was trained.\n",
+        "* **`dataset`:** The neural dataset on which the encoding model was trained.\n",
+        "* **`model`:** The type of encoding model used."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -457,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -494,7 +500,9 @@
         "id": "BN5ly1kQofkl"
       },
       "source": [
-        "The `print_format=True` parameter displays a nicely formatted hierarchical view in the console, making it easy to browse what's available."
+        "The `print_format=True` parameter displays a nicely formatted hierarchical view, making it easy to browse the available encoding models.\n",
+        "\n",
+        "<font color='red'><b>NOTE:</b></font> For a list of all available encoding model, please see the [documentation](https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/models/overview.html)."
       ]
     },
     {
@@ -503,17 +511,28 @@
         "id": "-o8hjRWxevXD"
       },
       "source": [
-        "## 1.3 | Detailed model information for selected models\n",
+        "## 1.3 | Get a detailed model information for the selected models\n",
         "\n",
-        "For this tutorial, we'll focus on the encoding model trained on **THINGS EEG2** dataset.\n",
-        "Nnote that the EEG data used to train and evaluate these encoding models were z-scored at each recording session. As a consequence, their generated in silico EEG responses also live in z-scored space.\n",
+        "For the purpose of this tutorial, you will use the encoding model with ID `eeg-things_eeg_2-vit_b_32`, a vision-transformer-based encoding model trained on EEG responses from THINGS EEG2 ([Gifford et al., 2022](https://doi.org/10.1016/j.neuroimage.2022.119754)).\n",
         "\n",
-        "Let's get comprehensive information about what this model does and how to use it with `.describe()`:"
+        "With the `describe()` you can get detailed information about this model and how to use it, including:\n",
+        "\n",
+        "* **Basic Information:** Details about the modality (EEG), dataset (THINGS EEG2), and encoding model (vit_b_32).\n",
+        "* **Description:** How the model works and what it does.\n",
+        "* **Input Requirements:** Format specifications for input stimuli (dimensions, type, etc.).\n",
+        "* **Output Format:** The structure and meaning of the model's in silico neural predictions.\n",
+        "* **Parameters:** Required and optional arguments for the model's functions.\n",
+        "* **Performance Information:** Directory where to find the encodind model's prediction accuracy plots.\n",
+        "* **Usage Examples:** Code snippets showing how to use the model.\n",
+        "\n",
+        "This information will help you understand how to properly set up and use the model in the following sections.\n",
+        "\n",
+        "<font color='red'><b>NOTE:</b></font> You can also view this information on the model in the [documentation](https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/models/overview.html)."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -652,31 +671,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pCbVWwIBofkl"
-      },
-      "source": [
-        "The `describe()` function provides all the essential information needed to work with the model, including:\n",
-        "\n",
-        "* **Basic Information:** Details about the modality (EEG), dataset (THINGS EEG), and features (ViT)\n",
-        "* **Description:** How the model works and what it does\n",
-        "* **Input Requirements:** Format specifications for images (dimensions, type, etc.)\n",
-        "* **Output Format:** The structure and meaning of the model's predictions\n",
-        "* **Parameters:** Required and optional arguments for functions like `get_encoding_model()`\n",
-        "* **Performance Information:** Metrics on how well the model performs\n",
-        "* **Usage Examples:** Code snippets showing how to use the model\n",
-        "\n",
-        "This information will help you understand how to properly set up and use the model in the following sections."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "9lsuYuQEop9U"
       },
       "source": [
         "# 2 | Generate in silico EEG responses to images\n",
-        "    \n",
-        "Now we'll use NEST to generate predicted EEG responses to visual stimuli."
+        "\n",
+        "Now you will use NEST to generate in silico EEG responses to images."
       ]
     },
     {
@@ -687,12 +687,12 @@
       "source": [
         "## 2.1 | Load and prepare the images for which the in silico EEG responses are generated\n",
         "\n",
-        "The `eeg-things_eeg_2-vit_b_32` encoding models expect images in a specific format: a 4D numpy array with shape (Batch size × 3 RGB Channels × Width × Height) and integer values in the range [0, 255]. The images must also be square (equal width and height), so we'll center crop them during loading."
+        "The `eeg-things_eeg_2-vit_b_32` encoding model expects input images in a specific format: a 4D numpy array with shape (Batch size × 3 RGB Channels × Width × Height) and integer values in the range [0, 255]. Because the images must also be of square size (equal width and height), you will center crop them during loading."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -759,12 +759,12 @@
         "id": "S4EZdlpdgCtH"
       },
       "source": [
-        "Let's visualize one of the loaded images to ensure everything looks correct:"
+        "Here you can visualize one of the loaded images of your choice."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -802,19 +802,16 @@
         "id": "r07eboj3gJ9a"
       },
       "source": [
-        "## 2.2 | Generate in silico EEG responses to images\n",
+        "## 2.2 | Generate the in silico EEG responses to images\n",
         "\n",
-        "Now we'll generate predicted EEG responses for our images. This is a two-step process:\n",
+        "Now you will use NEST's encoding models to generate the in silico EEG responses to these images, following two steps.\n",
         "\n",
-        "1. First, we load a specific encoding model with `get_encoding_model()`\n",
-        "2. Then, we use `encode()` to generate predictions for our images\n",
-        "\n",
-        "Let's set up the parameters for our model:"
+        "First, you will load a the `eeg-things_eeg_2-vit_b_32` encoding model with the `get_encoding_model()` method, based on the subject and ROI of your choice."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -838,12 +835,27 @@
         "# Select the Subject number\n",
         "subject = 1 # @param [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\"] {type:\"raw\", allow-input: true}\n",
         "print('Subject: ' + str(subject))\n",
-        "\n"
+        "\n",
+        "# Step 1: Load the encoding model for our chosen subjec\n",
+        "eeg_encoding_model = nest_object.get_encoding_model(\n",
+        "    model_id=model_id,\n",
+        "    subject=subject,\n",
+        "    device='auto'\n",
+        ")"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Second, you will use this model to generate the in silico EEG responses to images with the `encode()` method."
+      ],
+      "metadata": {
+        "id": "EYiddxBhe8_k"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -876,13 +888,6 @@
         }
       ],
       "source": [
-        "# Step 1: Load the encoding model for our chosen subjec\n",
-        "eeg_encoding_model = nest_object.get_encoding_model(\n",
-        "    model_id=model_id,\n",
-        "    subject=subject,\n",
-        "    device='auto'\n",
-        ")\n",
-        "\n",
         "# Step 2: Generate in silico EEG responses for our images\n",
         "insilico_eeg, insilico_eeg_metadata = nest_object.encode(\n",
         "    eeg_encoding_model,\n",
@@ -897,12 +902,12 @@
         "id": "BUvmjDWGiflS"
       },
       "source": [
-        "Let's examine the shape of our results:"
+        "Finally, you can examine the shape of the in silico fMRI responses."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -922,8 +927,8 @@
         }
       ],
       "source": [
-        "# Print the in silico EEG data dimensions\n",
-        "print('In silico EEG data shape:')\n",
+        "# Print the in silico EEG responses dimensions\n",
+        "print('In silico EEG responses shape:')\n",
         "print(insilico_eeg.shape)\n",
         "print('(Images x Repetitions x Channels x Time points)')"
       ]
@@ -936,18 +941,18 @@
       "source": [
         "# 3 | In silico EEG responses metadata\n",
         "\n",
-        "The in silico fMRI responses come with useful metadata that helps us understand and analyze the results. You can access this metadata either by setting `return_metadata=True` in the `encode()` function (as we did above), or by using the `get_metadata()` method on the encoding model:"
+        "The in silico EEG responses come with useful metadata. You can access this metadata either by setting `return_metadata=True` in the `encode()` function (as we did above), or by using the `get_metadata()` method on the encoding model object:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "1MJbQXgLjLUR"
       },
       "outputs": [],
       "source": [
-        "# Get metadata directly from the model\n",
+        "# Get metadata directly from the encoding model\n",
         "insilico_eeg_metadata = eeg_encoding_model.get_metadata()"
       ]
     },
@@ -957,9 +962,10 @@
         "id": "rzASGywAjc2u"
       },
       "source": [
-        "The metadata consists of a dictionary with two keys:\n",
-        "* `eeg`: metadata relative to the EEG responses used to train the encoding models.\n",
-        "* `encoding_models`: metadata relative to the trained EEG encoding models."
+        "The metadata is a dictionary with two main sections:\n",
+        "\n",
+        "* **`eeg`:** Information on the EEG data used to train the encoding models\n",
+        "* **`encoding_models`:** Information on the trained models themselves"
       ]
     },
     {
@@ -986,7 +992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1087,7 +1093,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1278,7 +1284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1339,7 +1345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1432,7 +1438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
