--- a/tutorials/nest_fmri_tutorial.ipynb
+++ b/tutorials/nest_fmri_tutorial.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8hej6J1ukOj6"
       },
@@ -88,7 +88,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -U git+https://github.com/gifale95/NEST.git@development"
+        "!pip install -U git+https://github.com/gifale95/NEST.git"
       ]
     },
     {
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "G4ze_dIrxRN_"
       },
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -264,12 +264,12 @@
       "source": [
         "## 1.1 | Create the NEST object\n",
         "\n",
-        "To use the NEST package, you first need to create a `NEST` object, providing the path to the Neural Encoding Simulation Toolkit directory. This object will be the instance through which you can generate in-silico brain responses."
+        "To use the NEST package, you first need to create a `NEST` object, by providing the path to the Neural Encoding Simulation Toolkit directory. This object will be the instance through which you can generate in silico neural responses."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "1o8VlO5vQT0E"
       },
@@ -287,14 +287,20 @@
       "source": [
         "## 1.2 | Browse the available encoding models\n",
         "\n",
-        "Let's explore what's available in the NEST toolkit. Each model has a unique ID with a naming pattern `modality_dataset_model`.\n",
+        "The `list_models()` method lists the encoding models that are available in NEST. NEST contains several encoding models, defined by the following model ID naming convention:\n",
         "\n",
-        "\n"
+        "`{modality}-{dataset}-{model}`\n",
+        "\n",
+        "where\n",
+        "\n",
+        "* **`modality`:** The neural recording recording modality on which the encoding model was trained.\n",
+        "* **`dataset`:** The neural dataset on which the encoding model was trained.\n",
+        "* **`model`:** The type of encoding model used."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -328,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -365,7 +371,9 @@
         "id": "jMIsjgmpohST"
       },
       "source": [
-        "The `print_format=True` parameter displays a nicely formatted hierarchical view in the console, making it easy to browse what's available."
+        "The `print_format=True` parameter displays a nicely formatted hierarchical view, making it easy to browse the available encoding models.\n",
+        "\n",
+        "<font color='red'><b>NOTE:</b></font> For a list of all available encoding model, please see the [documentation](https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/models/overview.html)."
       ]
     },
     {
@@ -374,14 +382,28 @@
         "id": "rnoc1kn3ohST"
       },
       "source": [
-        "## 1.3 | Detailed model information for selected models\n",
+        "## 1.3 | Get a detailed model information for the selected models\n",
         "\n",
-        "For this tutorial, we'll focus on the fMRI model that uses **feature-weighted receptive fields (fwRF)**. Let's get comprehensive information about what this model does and how to use it with `.describe()`:"
+        "For the purpose of this tutorial, you will use the encoding model with ID `fmri-nsd-fwrf`, a feature-weighted receptive field encoding model trained on fMRI responses from the Natural Scenes Dataset (NSD) ([Allen et al., 2022](https://doi.org/10.1038/s41593-021-00962-x)).\n",
+        "\n",
+        "With the `describe()` you can get detailed information about this model and how to use it, including:\n",
+        "\n",
+        "* **Basic Information:** Details about the modality (fMRI), dataset (NSD), and encoding model (fwRF).\n",
+        "* **Description:** How the model works and what it does.\n",
+        "* **Input Requirements:** Format specifications for input stimuli (dimensions, type, etc.).\n",
+        "* **Output Format:** The structure and meaning of the model's in silico neural predictions.\n",
+        "* **Parameters:** Required and optional arguments for the model's functions.\n",
+        "* **Performance Information:** Directory where to find the encodind model's prediction accuracy plots.\n",
+        "* **Usage Examples:** Code snippets showing how to use the model.\n",
+        "\n",
+        "This information will help you understand how to properly set up and use the model in the following sections.\n",
+        "\n",
+        "<font color='red'><b>NOTE:</b></font> You can also view this information on the model in the [documentation](https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/models/overview.html)."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -533,25 +555,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ut68EL7dohST"
-      },
-      "source": [
-        "The `describe()` function provides all the essential information needed to work with the model, including:\n",
-        "\n",
-        "* **Basic Information:** Details about the modality (fMRI), dataset (NSD), and features (fwRF)\n",
-        "* **Description:** How the model works and what it does\n",
-        "* **Input Requirements:** Format specifications for images (dimensions, type, etc.)\n",
-        "* **Output Format:** The structure and meaning of the model's predictions\n",
-        "* **Parameters:** Required and optional arguments for functions like `get_encoding_model()`\n",
-        "* **Performance Information:** Metrics on how well the model performs\n",
-        "* **Usage Examples:** Code snippets showing how to use the model\n",
-        "\n",
-        "This information will help you understand how to properly set up and use the model in the following sections."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "gONF-R_3ohST"
       },
       "source": [
@@ -567,7 +570,7 @@
       "source": [
         "# 2 | Generate in silico fMRI responses to images\n",
         "\n",
-        "Now we'll use NEST to generate predicted fMRI responses to visual stimuli."
+        "Now you will use NEST to generate in silico fMRI responses to images."
       ]
     },
     {
@@ -578,12 +581,12 @@
       "source": [
         "## 2.1 | Load and prepare the images for which the in silico fMRI responses are generated\n",
         "\n",
-        "The `fmri-nsd-fwrf` encoding models expect images in a specific format: a 4D numpy array with shape (Batch size × 3 RGB Channels × Width × Height) and integer values in the range [0, 255]. The images must also be square (equal width and height), so we'll center crop them during loading."
+        "The `fmri-nsd-fwrf` encoding model expects as input images in a specific format: a 4D numpy array with shape (Batch size × 3 RGB Channels × Width × Height) and integer values in the range [0, 255]. Because the images must also be of square size (equal width and height), you will center crop them during loading."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -650,12 +653,12 @@
         "id": "ZrT3a0nMIYw2"
       },
       "source": [
-        "Let's visualize one of the loaded images to ensure everything looks correct:"
+        "Here you can visualize one of the loaded images of your choice."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -693,19 +696,16 @@
         "id": "wGUiOTVI7cvI"
       },
       "source": [
-        "## 2.2 | Generate in silico fMRI responses to images\n",
+        "## 2.2 | Generate the in silico fMRI responses to images\n",
         "\n",
-        "Now we'll generate predicted fMRI responses for our images. This is a two-step process:\n",
+        "Now you will use NEST's encoding models to generate the in silico fMRI responses to these images, following two steps.\n",
         "\n",
-        "1. First, we load a specific encoding model with `get_encoding_model()`\n",
-        "2. Then, we use `encode()` to generate predictions for our images\n",
-        "\n",
-        "Let's set up the parameters for our model:"
+        "First, you will load a the `fmri-nsd-fwrf` encoding model with the `get_encoding_model()` method, based on the subject and ROI of your choice."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -733,7 +733,15 @@
         "\n",
         "# Select the Region of Interest (ROI)\n",
         "roi = \"V1\" # @param [\"V1\", \"V2\", \"V3\", \"hV4\", \"EBA\", \"FBA-2\", \"OFA\", \"FFA-1\", \"FFA-2\", \"OPA\", \"PPA\", \"RSC\", \"OWFA\", \"VWFA-1\", \"VWFA-2\", \"mfs-words\", \"early\", \"midventral\", \"midlateral\", \"midparietal\", \"ventral\", \"lateral\", \"parietal\"] {allow-input: true}\n",
-        "print('ROI: ' + roi)"
+        "print('ROI: ' + roi)\n",
+        "\n",
+        "# Step 1: Load the encoding model for our chosen subject and ROI\n",
+        "fmri_encoding_model = nest_object.get_encoding_model(\n",
+        "    model_id=model_id,\n",
+        "    subject=subject,\n",
+        "    selection={\"roi\": roi},\n",
+        "    device='auto'\n",
+        ")"
       ]
     },
     {
@@ -742,27 +750,12 @@
         "id": "xC1geCmMohSV"
       },
       "source": [
-        "The fMRI models are available for multiple brain regions, organized into functional categories and can be found in the `.describe()` function:\n",
-        "\n",
-        "* **Early retinotopic visual regions:** V1, V2, V3, hV4.\n",
-        "* **Body-selective regions:** EBA, FBA-2.\n",
-        "* **Face-selective regions:** OFA, FFA-1, FFA-2.\n",
-        "* **Place-selective regions:** OPA, PPA, RSC.\n",
-        "* **Word-selective regions:** OWFA, VWFA-1, VWFA-2, mfs-words.\n",
-        "* **Anatomical streams:** early, midventral, midlateral, midparietal, ventral, lateral, parietal.\n",
-        "\n",
-        "For more information on the NSD ROIs, please see the [NSD data manual][nsd_man].\n",
-        "\n",
-        "> Note: The fMRI data used to train these models was z-scored during collection, so the generated in silico responses are also in z-scored space.\n",
-        "\n",
-        "Now let's load the model and generate the fMRI responses:\n",
-        "\n",
-        "[nsd_man]: https://cvnlab.slite.page/p/X_7BBMgghj/ROIs"
+        "Second, you will use this model to generate the in silico fMRI responses to images with the `encode()` method."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -787,14 +780,6 @@
         }
       ],
       "source": [
-        "# Step 1: Load the encoding model for our chosen subject and ROI\n",
-        "fmri_encoding_model = nest_object.get_encoding_model(\n",
-        "    model_id=model_id,\n",
-        "    subject=subject,\n",
-        "    selection={\"roi\": roi},\n",
-        "    device='auto'\n",
-        ")\n",
-        "\n",
         "# Step 2: Generate in silico fMRI responses for our images\n",
         "insilico_fmri, insilico_fmri_metadata = nest_object.encode(\n",
         "    fmri_encoding_model,\n",
@@ -809,12 +794,12 @@
         "id": "tWrx4KdOohSW"
       },
       "source": [
-        "Let's examine the shape of our results:"
+        "Finally, you can examine the shape of the in silico fMRI responses."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -834,8 +819,8 @@
         }
       ],
       "source": [
-        "# Print the in silico fMRI data dimensions\n",
-        "print('In silico fMRI data shape:')\n",
+        "# Print the in silico fMRI responses dimensions\n",
+        "print('In silico fMRI responses shape:')\n",
         "print(insilico_fmri.shape)\n",
         "print('(Images × Voxels)')"
       ]
@@ -846,7 +831,7 @@
         "id": "11jwV2xKohSW"
       },
       "source": [
-        "The output is a 2D array where each row represents the predicted fMRI responses across all voxels in the selected ROI for a single image. The number of voxels varies by ROI and subject (for example, V1 in subject 1 has 1350 voxels)."
+        "The output is a 2D array where each row represents the predicted fMRI responses across all voxels in the selected ROI for a single image. The number of voxels varies by ROI and subject (for example, V1 in subject 1 has 1,350 voxels)."
       ]
     },
     {
@@ -857,18 +842,18 @@
       "source": [
         "# 3 | In silico fMRI responses metadata\n",
         "\n",
-        "The in silico fMRI responses come with useful metadata that helps us understand and analyze the results. You can access this metadata either by setting `return_metadata=True` in the `encode()` function (as we did above), or by using the `get_metadata()` method on the encoding model:"
+        "The in silico fMRI responses come with useful metadata. You can access this metadata either by setting `return_metadata=True` in the `encode()` function (as we did above), or by using the `get_metadata()` method on the encoding model object:"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "JAhkdOG7MFmW"
       },
       "outputs": [],
       "source": [
-        "# Get metadata directly from the model\n",
+        "# Get metadata directly from the encoding model\n",
         "insilico_fmri_metadata = fmri_encoding_model.get_metadata()"
       ]
     },
@@ -880,8 +865,8 @@
       "source": [
         "The metadata is a dictionary with two main sections:\n",
         "\n",
-        "* **fmri:** Information about the fMRI data used to train the encoding models\n",
-        "* **encoding_models:** Information about the trained models themselves"
+        "* **`fmri`:** Information on the fMRI data used to train the encoding models\n",
+        "* **`encoding_models`:** Information on the trained models themselves"
       ]
     },
     {
@@ -914,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -942,7 +927,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1007,7 +992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1077,7 +1062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1141,7 +1126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1190,7 +1175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
