Updated tutorial links

--- a/tutorials/nest_quickstart.ipynb
+++ b/tutorials/nest_quickstart.ipynb
@@ -21,8 +21,8 @@
         "[nest]: https://www.alegifford.com/projects/nest/\n",
         "[documentation]: https://neural-encoding-simulation-toolkit.readthedocs.io/en/latest/index.html\n",
         "[github]: https://github.com/gifale95/NEST\n",
-        "[colab]: https://colab.research.google.com/drive/1W9Sroz2Y0eTYfyhVrAJwe50GGHHAGBdE?usp=sharing\n",
-        "[jupyter]: https://github.com/gifale95/NEST/blob/main/tutorials/nest_fmri_tutorial.ipynb"
+        "[colab]: https://drive.google.com/file/d/1JS4um1eS4Ml983lUNQgEw4544_Lc5Qn0/view?usp=sharing\n",
+        "[jupyter]: https://github.com/gifale95/NEST/blob/main/tutorials/nest_quickstart.ipynb"
       ]
     },
     {
